<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".projects">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/purple_700">
        <ImageView
            android:id="@+id/img4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_marginTop="8dp"
            android:layout_marginStart="18dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Projects"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*To-Do-List App"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/ToDo"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/ToDoDes"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="4dp"
            android:textSize="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:text="-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
            android:textSize="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*Google Step Count App"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/gsc"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/gscDes"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="4dp"
            android:textSize="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:text="-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
            android:textSize="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*Hospital Management Software"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/HMS"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/hmsDes"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="4dp"
            android:textSize="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:text="-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
            android:textSize="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*Tik Tak Toe App"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/tik"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/tikDes"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="4dp"
            android:textSize="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:text="-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
            android:textSize="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*NetClone App UI"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/tik"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:text="-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
            android:textSize="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>